Chapter 1 second pass

--- a/A.tex
+++ b/A.tex
@@ -147,30 +147,21 @@ After the risks are evaluated, different activities are required to mitigate the
 Relying on clinical trials as the only closed-loop evaluation method to identify risks is not realistic. Model-based design has been proposed and applied in other industries like automobile (\cite{}), and can potentially help during the development process and provide extra confidence to the device before conducting clinical trials. However, unlike man-made systems like cars and aircrafts, physiological systems are less understood with larger variations. The lack of faithful models of physiological environment of the closed-loop medical devices is one of the reason that model-based design is not well-adopted in the medical device industry. 
 
 With developments of computational tools and understanding of human physiology, computational models of human physiology have been developed which enable model-based closed-loop evaluations of the closed-loop medical devices. FDA is starting to recognize model simulation results as evidence for device safety and effectiveness. \cite{pancreas_paul} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, which significantly reduced cost (\cite{pancreas}).
-\subsection{At Which Step Can We Help?}
-Research results should fit in the framework in the real world.
-Our work fits in the responsibilities of design validation teams in the device company.
-Assume we have design artifacts like specifications (written form or model form), requirements, software or even physical devices
 
 \section{Contributions}
-In this paper we use implantable pacemaker as example to demonstrate how model-based design can help improve the safety and efficacy of the implantable pacemaker during software development. We demonstrate the development process from the perspective of the verification team of device manufacturers, therefore we assume to have full access to the pacemaker software design. The pacemaker software design is referenced from a dual chamber pacemaker from Boston Scientific (\cite{compass}).
+In this paper we use implantable pacemaker as example to demonstrate how model-based design can help improve the safety and efficacy of the implantable pacemaker during software development. We demonstrate the application of model-based design in several design activities during the development process from the perspective of the design validation team of device manufacturers, therefore we assume to have full access to design artifacts including pacemaker design and physiological requirements. The results of our model-based closed-loop evaluation should be able to support the safety and effectiveness of the pacemaker during the regulation process.
 
-Our proposed model-driven design (MDD) for closed-loop medical devices begins with developing heart models that can interact with real and modeled pacemakers (\cite{VHM_proc}). With the help of heart models, hazards themselves can be used as requirements directly and identify known and even unknown mechanisms that may trigger the hazards using techniques like model checking.
-
-\todo{We may need to make another figure since this one does not show clearly how those activities fits in regulation}
-As shown from the top of \figref{modeling_overview}, the heart-pacemaker closed-loop systems is first modeled abstractly to facilitate verification of the basic pacemaker design with maximum coverage (\cite{STTT13}). In our case, we use timed automata and the UPPAAL model checker at this design stage.
-
-Next, the models are translated to more detailed models that take into account the complex dynamics of the heart and interaction with more detailed pacemaker model (\cite{vhm_ecrts10, vhm_embc11,vhm_iccps11}). We use Stateflow and Simulink at this design stage. These models are validated by physicians for their clinical relevance. The automatic model translation procedure, from UPPAAL to Stateflow, ensures that abstract models used for verification over-approximate the more detailed models used downstream (\cite{RTAS12}). Once the detailed models pass simulation-based testing with closed-loop dynamics, they are automatically generated into code and are subject to platform-level integration testing (\cite{vhm_website}). This MDD approach ensures the closed-loop safety properties are retained through the design toolchain and facilitates the development of verified software from verified models.
+Our proposed model-driven design (MDD) for closed-loop medical devices (\figref{modeling_overview}) begins with developing heart models that can interact with real and modeled pacemakers (\cite{VHM_proc}). The heart models are available in different formalisms to interact with the pacemaker design in closed-loop at different design stages. In Chapter 2 we introduce our heart models for closed-loop model checking and testing of implantable cardiac devices, and the rationale for the difference between heart models used in these two applications. In closed-loop evaluation, the heart models have to be able to represent different physiological conditions. In Chapter 3 we validate the heart models and discuss how to identify model parameters from patient data so that the heart model can represent different physiological conditions. In Chapter 4 we introduce the pacemaker software specification which is referenced from a dual chamber pacemaker design from Boston Scientific (\cite{compass}). The software specification is converted to an abstract formalism called \emph{Timed Automata} (\cite{timed_automata}). The timed automata model of the pacemaker will be the starting point for our model-based analysis and implementation. In Chapter 5 we identify two basic hazards for pacemaker and use model checking in UPPAAL (\cite{uppaal}) to evaluate whether the hazards have been reasonably mitigated. With the help of heart models introduced in Chapter2, we are able to cover the closed-loop behaviors of large variety of heart conditions so that we can evaluate whether there exists any known and even unknown mechanism to induce hazards (\cite{STTT13}). Due to complexity concern and restrictions of the formalism, pacemaker and heart models used in model-checking are abstract so that complex dynamics of the heart and pacemaker are not captured. In Chapter 6, we developed an automatic model translation procedure to translate models from UPPAAL to Stateflow (\cite{stateflow}) to ensures that abstract models used for verification over-approximate the more detailed models used downstream (\cite{RTAS12}). The Stateflow model of the pacemaker is then evaluated with heart models with detailed dynamics (\cite{vhm_ecrts10, vhm_embc11,vhm_iccps11}). Once the detailed models pass simulation-based testing with closed-loop dynamics, they are automatically generated into code and are subject to platform-level integration testing (\cite{vhm_website}). This MDD approach ensures the closed-loop safety properties are retained through the design toolchain and facilitates the development of verified software from verified models.
 \begin{figure}[t]
 		\centering
-		\includegraphics[width=0.8\textwidth]{figs/modeling_overview.jpg}
+		\includegraphics[width=0.9\textwidth]{figs/model_based_b.pdf}
 		%\vspace{-5pt}
 		\caption{\small Model-driven design for verified models to verified code for the closed-loop heart and pacemaker system}
 		  %\vspace{-15pt}
 		\label{fig:modeling_overview}
 \end{figure}
 
-The focus of this effort is three-fold: (a) We developed an integrated functional (i.e., clinically-relevant) and formal (i.e., timed automata based) Virtual Heart Model  (VHM) (see \figref{heartmodel}) and a pacemaker device model for interactive and clinically relevant test generation.  (b) We provide a set of general and patient condition-specific pacemaker software requirements to ensure the safety of the patient is met under all cases, and (c) We provide a means to test and verify the closed-loop system over a variety of basic operation tests where the heart rate must be maintained, the atrial-ventricle synchrony must be enforced and complex closed-loop tests, where the pacemaker must not initiate tachycardia or perform improperly during lead displacement. With this approach of model-based testing, an executable functional model of the pacemaker is created at an early stage in the development process. This model-based methodology is an early step in addressing the urgent need for pre-market evaluation of medical device design and certification.
+%The contribution of this effort is three-fold: (a) We developed an integrated functional (i.e., clinically-relevant) and formal (i.e., timed automata based) Virtual Heart Model  (VHM) (see \figref{heartmodel}) and a pacemaker device model for interactive and clinically relevant test generation.  (b) We provide a set of general and patient condition-specific pacemaker software requirements to ensure the safety of the patient is met under all cases, and (c) We provide a means to test and verify the closed-loop system over a variety of basic operation tests where the heart rate must be maintained, the atrial-ventricle synchrony must be enforced and complex closed-loop tests, where the pacemaker must not initiate tachycardia or perform improperly during lead displacement. With this approach of model-based testing, an executable functional model of the pacemaker is created at an early stage in the development process. This model-based methodology is an early step in addressing the urgent need for pre-market evaluation of medical device design and certification.
 
 
 \section{Terminologies}
