Chapter 1 and 2 formating

--- a/A.tex
+++ b/A.tex
@@ -59,32 +59,33 @@ According to the US Food and Drug Administration, in 1996, 10\% of all medical d
 The medical device industry is a regulated one to ensure the safety of the patients. The United States Food and Drug Administration (FDA) is the primary regulatory authority responsible for assuring the safety, efficacy and security of patients using medical devices. Based on the rationale that 1) manufacturers know their devices better than the regulator, and 2) the variety of medical devices requires a variety of approaches, the device manufacturers are responsibility to demonstrate the safety and efficacy of the medical devices. Manufacturers are required to complete pre-market submission before the devices can be released to the market. The level of requirements for the submission is determined by the safety classification of the devices. A set of general guidelines are recommended by the FDA (\cite{fda1, fda2, fda3}) which list the activities that need to be performed to ensure device safety. 
 
 In safety-critical industries such as automotive electronics, avionics and nuclear systems, international standards are enforced for system development, evaluation, manufacturing and post-market changes (\cite{autosar,avsi}). This awareness is only beginning to enter the medical device industry as compliance with international standards are "recommended" in the aforementioned guidelines (\cite{formal_fda}). The basic rationale behind these standards is that: if all the risks/hazards of the device are identified and reasonably mitigated, and the device is developed with rigorous process, the device is reasonably safe. 
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.6\textwidth]{figs/stardards.pdf}
+		\caption{\small International Standards Regarding Medical Device Safety}
+		\label{fig:standards}
+\end{figure}
 
 \figref{standards} demonstrates the fundamental standards to ensure medical device safety and their relationships. The IEC 60601 Medical Electrical Equipment - General requirements for basic safety and essential performance is a product safety standard that all electronic medical devices must comply to. There are emphasis on the safety of the software components. IEC 60324 specifies the processes and activities needed to perform during the software development life cycle to ensure software safety. 
 Risk management is a core activity throughout the software development life cycle. ISO 14971 is specified for the application of risk management to medical devices. In addition, for each risk management activity of ISO 14971, ISO 80002-1 provides additional guidelines for the software component, which highlights and explains approaches to assuring that software safety is adequately addressed.
 %The history of the FDA is a reactionary one, where each stage of evolution was in response to a major healthcare tragedy. 
 \begin{figure}[t]
 		\centering
-		\includegraphics[width=0.8\textwidth]{figs/standards.pdf}
-		\caption{\small International Standards Regarding Medical Device Safety}
-		\label{fig:standards}
-\end{figure}
-\subsection{Risk Management}
-Risk management includes risk analysis, risk evaluation and risk control. Fault Tree Analysis (FTA) is a common tool in risk analysis in which hazards of the system are first identified and the possible causes of the hazards are analyzed until the initial faults are reached. \figref{risks}.(a) demonstrate an example fault tree for automobile. The problem for fault tree analysis is that all possible causes are analyzed manually. In closed-loop medical devices, there may exist closed-loop interactions between the device and the patient that can cause certain hazard, but are unknown due to the limited physiological knowledge. \figref{risks}.(b) demonstrate a fault tree for a hazard of implantable pacemaker. There are several causes for undesirable fast ventricular rate. The well-understood cause is the intrinsic ventricular tachycardia (solid line). However, with pacemaker implanted, new mechanisms to cause hazard are introduced into the closed-loop system, as illustrated by the two branches with dotted lines. These two branches were not identified during the initial fault tree analysis, and were only identified after the devices have been released into the market, causing unnecessary adverse effects to the patients \cite{ELT}. Risks identified at this stage are also more costly to fix, increasing the cost for device development. \todo{Related to closed-loop model-checking}
-\begin{figure}[t]
-		\centering
 		\includegraphics[width=\textwidth]{figs/fta_new.pdf}
 		\caption{\small Fault Tree Analys (FTA) Examples. (a) FTA for a hazard for a car; (b) FTA for a hazard in implantable pacemaker}
 		\label{fig:risks}
 \end{figure}
-
-After the fault tree has been constructed, probabilities for the initial faults are analyzed bottom up to calculate the probability of each hazard. The technique is called Failure Mode and Effects Analysis (FMEA). Then the risks are evaluated by assigning risk index to each hazard according to their occurrence and severity (\figref{risk_ana}). \todo{Related to requirement hierarchy}
+\subsection{Risk Management}
+Risk management includes risk analysis, risk evaluation and risk control. Fault Tree Analysis (FTA) is a common tool in risk analysis in which hazards of the system are first identified and the possible causes of the hazards are analyzed until the initial faults are reached. \figref{risks}.(a) demonstrate an example fault tree for automobile. The problem for fault tree analysis is that all possible causes are analyzed manually. In closed-loop medical devices, there may exist closed-loop interactions between the device and the patient that can cause certain hazard, but are unknown due to the limited physiological knowledge. \figref{risks}.(b) demonstrate a fault tree for a hazard of implantable pacemaker. There are several causes for undesirable fast ventricular rate. The well-understood cause is the intrinsic ventricular tachycardia (solid line). However, with pacemaker implanted, new mechanisms to cause hazard are introduced into the closed-loop system, as illustrated by the two branches with dotted lines. These two branches were not identified during the initial fault tree analysis, and were only identified after the devices have been released into the market, causing unnecessary adverse effects to the patients \cite{ELT}. Risks identified at this stage are also more costly to fix, increasing the cost for device development. \todo{Related to closed-loop model-checking}
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=\textwidth]{figs/risk_analysis.pdf}
 		\caption{Top table: Risk index according to occurrence and severity. Bottom table: Risk control using risk index}
 		\label{fig:risk_ana}
 \end{figure}
+
+After the fault tree has been constructed, probabilities for the initial faults are analyzed bottom up to calculate the probability of each hazard. The technique is called Failure Mode and Effects Analysis (FMEA). Then the risks are evaluated by assigning risk index to each hazard according to their occurrence and severity (\figref{risk_ana}). \todo{Related to requirement hierarchy}
+
 
 After the risks are evaluated, different activities are required to mitigate the risks according to the risk index. After efforts made to reduce the risks, the risks should be re-evaluated to calculate the residual risk and analyze the risk/benefit. This is part of the risk control process.\todo{related to both the requirement hierarchy and model checking}
 \subsection{Clinical Trials}
@@ -150,8 +151,6 @@ With developments of computational tools and understanding of human physiology, 
 
 \section{Contributions}
 In this paper we use implantable pacemaker as example to demonstrate how model-based design can help improve the safety and efficacy of the implantable pacemaker during software development. We demonstrate the application of model-based design in several design activities during the development process from the perspective of the design validation team of device manufacturers, therefore we assume to have full access to design artifacts including pacemaker design and physiological requirements. The results of our model-based closed-loop evaluation should be able to support the safety and effectiveness of the pacemaker during the regulation process.
-
-Our proposed model-driven design (MDD) for closed-loop medical devices (\figref{modeling_overview}) begins with developing heart models that can interact with real and modeled pacemakers (\cite{VHM_proc}). The heart models are available in different formalisms to interact with the pacemaker design in closed-loop at different design stages. In Chapter 2 we introduce our heart models for closed-loop model checking and testing of implantable cardiac devices, and the rationale for the difference between heart models used in these two applications. In closed-loop evaluation, the heart models have to be able to represent different physiological conditions. In Chapter 3 we validate the heart models and discuss how to identify model parameters from patient data so that the heart model can represent different physiological conditions. In Chapter 4 we introduce the pacemaker software specification which is referenced from a dual chamber pacemaker design from Boston Scientific (\cite{compass}). The software specification is converted to an abstract formalism called \emph{Timed Automata} (\cite{timed_automata}). The timed automata model of the pacemaker will be the starting point for our model-based analysis and implementation. In Chapter 5 we identify two basic hazards for pacemaker and use model checking in UPPAAL (\cite{uppaal}) to evaluate whether the hazards have been reasonably mitigated. With the help of heart models introduced in Chapter2, we are able to cover the closed-loop behaviors of large variety of heart conditions so that we can evaluate whether there exists any known and even unknown mechanism to induce hazards (\cite{STTT13}). Due to complexity concern and restrictions of the formalism, pacemaker and heart models used in model-checking are abstract so that complex dynamics of the heart and pacemaker are not captured. In Chapter 6, we developed an automatic model translation procedure to translate models from UPPAAL to Stateflow (\cite{stateflow}) to ensures that abstract models used for verification over-approximate the more detailed models used downstream (\cite{RTAS12}). The Stateflow model of the pacemaker is then evaluated with heart models with detailed dynamics (\cite{vhm_ecrts10, vhm_embc11,vhm_iccps11}). Once the detailed models pass simulation-based testing with closed-loop dynamics, they are automatically generated into code and are subject to platform-level integration testing (\cite{vhm_website}). This MDD approach ensures the closed-loop safety properties are retained through the design toolchain and facilitates the development of verified software from verified models.
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=0.9\textwidth]{figs/model_based_b.pdf}
@@ -160,6 +159,8 @@ Our proposed model-driven design (MDD) for closed-loop medical devices (\figref{
 		  %\vspace{-15pt}
 		\label{fig:modeling_overview}
 \end{figure}
+
+Our proposed model-driven design (MDD) for closed-loop medical devices (\figref{modeling_overview}) begins with developing heart models that can interact with real and modeled pacemakers (\cite{VHM_proc}). The heart models are available in different formalisms to interact with the pacemaker design in closed-loop at different design stages. In Chapter 2 we introduce our heart models for closed-loop model checking and testing of implantable cardiac devices, and the rationale for the difference between heart models used in these two applications. In closed-loop evaluation, the heart models have to be able to represent different physiological conditions. In Chapter 3 we validate the heart models and discuss how to identify model parameters from patient data so that the heart model can represent different physiological conditions. In Chapter 4 we introduce the pacemaker software specification which is referenced from a dual chamber pacemaker design from Boston Scientific (\cite{compass}). The software specification is converted to an abstract formalism called \emph{Timed Automata} (\cite{timed_automata}). The timed automata model of the pacemaker will be the starting point for our model-based analysis and implementation. In Chapter 5 we identify two basic hazards for pacemaker and use model checking in UPPAAL (\cite{uppaal}) to evaluate whether the hazards have been reasonably mitigated. With the help of heart models introduced in Chapter2, we are able to cover the closed-loop behaviors of large variety of heart conditions so that we can evaluate whether there exists any known and even unknown mechanism to induce hazards (\cite{STTT13}). Due to complexity concern and restrictions of the formalism, pacemaker and heart models used in model-checking are abstract so that complex dynamics of the heart and pacemaker are not captured. In Chapter 6, we developed an automatic model translation procedure to translate models from UPPAAL to Stateflow (\cite{stateflow}) to ensures that abstract models used for verification over-approximate the more detailed models used downstream (\cite{RTAS12}). The Stateflow model of the pacemaker is then evaluated with heart models with detailed dynamics (\cite{vhm_ecrts10, vhm_embc11,vhm_iccps11}). Once the detailed models pass simulation-based testing with closed-loop dynamics, they are automatically generated into code and are subject to platform-level integration testing (\cite{vhm_website}). This MDD approach ensures the closed-loop safety properties are retained through the design toolchain and facilitates the development of verified software from verified models.
 
 %The contribution of this effort is three-fold: (a) We developed an integrated functional (i.e., clinically-relevant) and formal (i.e., timed automata based) Virtual Heart Model  (VHM) (see \figref{heartmodel}) and a pacemaker device model for interactive and clinically relevant test generation.  (b) We provide a set of general and patient condition-specific pacemaker software requirements to ensure the safety of the patient is met under all cases, and (c) We provide a means to test and verify the closed-loop system over a variety of basic operation tests where the heart rate must be maintained, the atrial-ventricle synchrony must be enforced and complex closed-loop tests, where the pacemaker must not initiate tachycardia or perform improperly during lead displacement. With this approach of model-based testing, an executable functional model of the pacemaker is created at an early stage in the development process. This model-based methodology is an early step in addressing the urgent need for pre-market evaluation of medical device design and certification.
 
