--- a/F.tex
+++ b/F.tex
@@ -136,7 +136,7 @@ One common case for lead dislodge is shown in \figref{race_cond}, where the atri
 
 Oversensing, crosstalk and lead displacement are three examples where model-based verification and simulation-based testing have limited influence in detecting and correcting the problem. In such cases, the code generated for the pacemaker must be evaluated with the heart-on-a-chip platform for replaying error cases from patient hearts.
 
-\section{Conclusion}
+\chapter{Conclusion and Future Work}
 As implantable medical devices grow in sophistication with significant capabilities implemented in software, firmware bugs account for an increasing fraction of device recalls. Since the FDA  does not test, verify or certify the software in such devices, there is an urgent need for a systematic methodology to guarantee the safety of the device software. Furthermore, this safety must account for the closed-loop interaction with the organs of interest. In this effort, we have presented a first step in the direction of a holistic approach for model-based testing and physical patient--device interactive validation. We achieve this through the design of an integrated functional and formal model of the heart and pacemaker device using timed automata. Using this closed-loop system, we conducted formal verification and translate the models to Stateflow for simulation-based testing and then automatically generate code from the verified models. We investigated basic operations, complex algorithms such as response to Pacemaker Mediated Tachycardia and platform-based testing of physical issues such as crosstalk and lead displacement. 
 
 To validate the environment model, we described an Abstraction Tree approach to select the heart model most appropriate for the specific requirement. This approach separated the evaluation phases where domain knowledge was necessary and where it was not, which simplified the verification of the medical device across a range of heart conditions. The model-based design toolchain from verified models to verified code is conducted within the clinically-relevant context and captures the complexities of interaction with physiological components. 
